<resources>
    <string name="app_name">Ordem de serviços</string>
    <string name="title_activity_login">Entrar</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Nome</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_cad_login">Cadastrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Este endereço de email não é valido inválido</string>
    <string name="error_invalid_password">Esta senha é muito curta</string>
    <string name="error_incorrect_password">Esta senha está incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Permissões de contatos são necessárias."
    </string>
    <string name="title_activity_main_list_controller">MainListController</string>
    <string name="title_home">Serviços</string>
    <string name="title_new_service">Novo Serviço</string>
    <string name="title_about">Sobre</string>
    <string name="title_activity_menu_controller">Ordem de serviço</string>
    <string name="title_contact">Contato</string>
    <string name="title_address">Endereço</string>
    <string name="title_save">Salvar</string>
    <string name="title_task">Tarefa</string>

    <string name="action_cad">Cadastrar</string>
    <string name="name_requester">Nome do Solicitante</string>
    <string name="email_cli">Email do solicitante</string>
    <string name="cellPhone_cli">Celular do solicitante</string>
    <string name="phone_cli">Telefone do solicitante</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descri_task">Descrição da Tarefa</string>
    <string name="address_task">Endereço da tarefa</string>
    <string name="save">Salvar</string>
    <string name="title_activity_maps">Mapa do serviço</string>


</resources>
