<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CadCliFragment">



    <LinearLayout
        android:id="@+id/dataContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:minHeight="450dp"
        android:layout_marginTop="65dp"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lbNameCli">

            <EditText
                android:id="@+id/nameCli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_requester"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/emailCli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_cli"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cellPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cellPhone_cli"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phoneCli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_cli"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <!-- EditText de descrição -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lbDescription">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="100dip">

                <EditText
                    android:id="@+id/description"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:hint="@string/descri_task"
                    android:inputType="textMultiLine"
                    android:maxLines="20"
                    android:scrollbars="vertical"
                    />
            </ScrollView>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSaveCli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="saveDataClient"
            tools:ignore="OnClick" />


    </LinearLayout>

</FrameLayout>